--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@picocss/pico": "^2.0.6",
     "aos": "^2.3.4",
-    "astro": "^4.15.9"
+    "astro": "^4.15.9",
+    "axios": "^1.7.7",
+    "particlesjs": "^2.2.3",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
